2013-08-31 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.2.1
  * several optimizations
    - when looking for all resource instances, first list all ports and then
      select only those for which options file(s) exist(s) - this is opose to
      what we had previously (scanning options files first); this eliminates
      the need for double scanning of options files, cumbersome port searches
      and querying for make variables,
    - querying for make variables (such as OPTIONS_FILE) is no longer
      performed; this information is now obtained by other means
2013-08-30 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.2.0
  * module totally revamped:
    - reimplemented bsdportconfig to be prefetch/flush resource
    - most details are shifted to a new Puppet::Util::Bsdportconfig module,
    - removed $portsdir and $port_dbdir params, these are class attributes now,
    - the resource is no longer ensurable, the $ensure property was removed,
    - make -V is used internally to retrieve resource parameters,
    - make showconfig is no longer used to read current options,
    - current options are retrieved only from the options files,
    - options are written to "options.local" instead of "options",
    - options not listed by user in '$options' are not written to a file,
    - optimizations are added to reduce number of calls to external commands,
    - added validation of the $name parameter
    - unit tests adapted to new implementation
2013-08-27 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.6
  * add support for plain package names (witohut origin)
2013-08-22 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.5
  * minor corrections to README.md
2013-08-22 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.4
  * small corrections to ports.rb and README.md
2013-07-06 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.3
  * fixed lib/puppet/provider/bsdportconfig/ports.rb - delete_if was used as a
    global function