@@ -14,7 +14,7 @@ Puppet::Type.type(:bsdportconfig).provide :ports do
     require 'puppet/util/bsdportconfig'
     include Puppet::Util::Bsdportconfig
 
-    PROPERTY_HASH_GETTERS = [:options_file, :origin, :package, :port] 
+    PROPERTY_HASH_GETTERS = [:options_file, :origin, :package, :pkgname] 
 
     def mk_property_hash_getters
       PROPERTY_HASH_GETTERS.each do |key|
@@ -24,44 +24,44 @@ Puppet::Type.type(:bsdportconfig).provide :ports do
       end
     end
 
-    def portsdir
-      unless @portsdir
-        unless (@portsdir = ENV['PORTSDIR'])
-          os =  Facter.value(:operatingsystem)
-          @portsdir = (os == "NetBSD") ? '/usr/pkgsrc' : '/usr/ports'
-        end
-      end
-      @portsdir
-    end
-
-    def port_dbdir
-      unless @port_dbdir
-        unless (@port_dbdir = ENV['PORT_DBDIR'])
-          @port_dbdir = '/var/db/ports'
-        end
-      end
-      @port_dbdir
-    end
-
-    def instances
-      hashes = prefetch_property_hashes_with_options(portsdir, port_dbdir)
-      hashes.map{|key,hash| new(hash) }
-    end
-
-    def prefetch(resources)
-      hashes = prefetch_property_hashes(resources.keys, portsdir, port_dbdir)
-      hashes.each do |key, hash|
-        resources[key].provider = new(hash)
-      end
-    end
-
   end # << self
+
+  def self.portsdir
+    unless @portsdir
+      unless (@portsdir = ENV['PORTSDIR'])
+        os =  Facter.value(:operatingsystem)
+        @portsdir = (os == "NetBSD") ? '/usr/pkgsrc' : '/usr/ports'
+      end
+    end
+    @portsdir
+  end
+
+  def self.port_dbdir
+    unless @port_dbdir
+      unless (@port_dbdir = ENV['PORT_DBDIR'])
+        @port_dbdir = '/var/db/ports'
+      end
+    end
+    @port_dbdir
+  end
+
+  def self.instances
+    hashes = prefetch_property_hashes_with_options(portsdir, port_dbdir)
+    hashes.map{|key,hash| new(hash) }
+  end
+
+  def self.prefetch(resources)
+    hashes = prefetch_property_hashes(resources.keys, portsdir, port_dbdir)
+    hashes.each do |key, hash|
+      resources[key].provider = new(hash)
+    end
+  end
 
   mk_resource_methods
   mk_property_hash_getters
 
   def flush
-    self.class.save_options(options_file, options, port)
+    self.class.save_options(options_file, options, pkgname)
     @property_hash.clear
   end
 
