@@ -12,43 +12,43 @@ TERMINOLOGY
 
 We use the following terminology when referring ports/packages:
 
-- a string in form 'apache22' or 'ruby' is referred to as package
-  name (or package in short)
-- a string in form 'apache22-2.2.25' or 'ruby-1.8.7.371,1'
-  is referred to as a port name (or port in short)
-- a string in form 'www/apache22' or 'lang/ruby18' is referred to as a
-  port origin (or origin in short)
+  * a string in form `'apache22'` or `'ruby'` is referred to as *portname* 
+  * a string in form `'apache22-2.2.25'` or `'ruby-1.8.7.371,1'` is referred to
+    as a *pkgname* 
+  * a string in form `'www/apache22'` or `'lang/ruby18'` is referred to as a
+    port *origin* 
 
-Package origins are used as primary identifiers for bsdportconfig
-instances. It's recommended to use package origins or port names to
-identify ports.
+See http://www.freebsd.org/doc/en/books/porters-handbook/makefile-naming.html
 
-AMBIGUITY OF PACKAGE NAMES
+Package origins are used as primary identifiers for bsdportconfig instances.
+It's recommended to use package origins or port names to identify ports.
 
-Accepting package names (e.g. apache22) as the name parameter was
-introduced for convenience in 0.2.0. However, package names in this form
-are ambiguous, meaning that port search may find multiple ports matching
-the given package name. For example 'ruby' package has three ports at the
-time of this writing  (2013-08-30): ruby-1.8.7.371,1, ruby-1.9.3.448,1, and
-ruby-2.0.0.195_1,1 with origins lang/ruby18, lang/ruby19 and lang/ruby20
-respectively. If you pass a package name which is ambiguous, transaction
-will fail with message such as:
+AMBIGUITY OF PORTNAMES
+
+Accepting *portnames* (e.g. `apache22`) as the [name](#name-required)
+parameter was introduced for convenience in 0.2.0. However, *portnames* in
+this form are ambiguous, meaning that port search may find multiple ports 
+matching the given *portname*. For example `'ruby'` package has three ports
+at the time of this writing  (2013-08-30): `ruby-1.8.7.371,1`,
+`ruby-1.9.3.448,1`, and `ruby-2.0.0.195_1,1` with origins `lang/ruby18`,
+`lang/ruby19` and `lang/ruby20` respectively. If you pass a portname which
+matches multiple ports, transaction will fail with a message such as:
 
     Error: Could not prefetch bsdportconfig provider 'ports': found 3 ports with name 'ruby': 'lang/ruby18', 'lang/ruby19', 'lang/ruby20'
 DOC
     newparam(:name) do
 
-      desc "Reference to a port. A package name, port name or origin may be
-      passed as the `name` parameter (see TERMINOLOGY in resource description).
-      If the name has form 'category/subdir' it is treated as an origin.
-      Otherwise, the provider tries to find matching port by port name and if
-      it fails, by package name. Note, that package names are ambiguous, see
-      AMBIGUITY OF PACKAGE NAMES in the resource description."
+      desc "Reference to a port. A *portname*, *pkgname* name or *origin* may
+      be passed as the `name` parameter (see TERMINOLOGY in resource
+      description).  If the name has form 'category/subdir' it is treated as an
+      *origin*. Otherwise, the provider tries to find matching port by
+      *pkgname* and if it fails, by *portname*. Note, that *portname*s are
+      ambiguous, see AMBIGUITY OF PORTNAMES in the resource description."
 
       validate do |name|
-        regexps = [ /^#{Puppet::Util::Bsdportconfig::ORIGIN_RE}$/,
-                    /^#{Puppet::Util::Bsdportconfig::PORT_RE}$/,
-                    /^#{Puppet::Util::Bsdportconfig::PACKAGE_RE}$/ ]
+        regexps = [ /^#{Puppet::Util::Bsdportconfig::PORTORIGIN_RE}$/,
+                    /^#{Puppet::Util::Bsdportconfig::PKGNAME_RE}$/,
+                    /^#{Puppet::Util::Bsdportconfig::PORTNAME_RE}$/ ]
         unless regexps.any? {|re| name =~ re }
           fail ArgumentError, "#{name.inspect} is ill-formed (for $name)"
         end
